# Alpaca-Broker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DECISIONS.md  LEARNINGS.md  ROADMAP.md  SPRINT7_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  api.ts  index.css
frontend/src/pages/: DashboardPage.tsx  LogsPage.tsx  SettingsPage.tsx  SignalsPage.tsx  TickerPage.tsx  UniversePage.tsx
infra/: Dockerfile.collector  docker-compose.yml  entrypoint.sh
scripts/: backfill_prices.py  cleanup_etfs.py  debug_ark_nflx.py  debug_dividend.py  debug_senate_ajax.py  enrich_universe_sectors.py  init_universe.py  sync_universe_indexes.py  validate_universe.py
src/alembic/: env.py
src/alembic/versions/: 001_create_schema_signals.py  (+16 more)
src/trading_signals/: __init__.py  config.py  main.py
tests/fixtures/: ark_sample_response.json  company_tickers_sample.json  form4_sample.xml
tests/unit/: test_alpaca_validator.py  test_analyst_ratings_collector.py  test_ark_collector.py  test_ark_deltas.py  test_base_collector.py  test_config.py  test_earnings_calendar_collector.py  test_form13f_collector.py  test_form4_collector.py  test_fundamentals_collector.py  test_gap_detector.py  test_index_sync.py  test_insider_clusters.py  test_politician_trades.py  test_price_collector.py  test_price_collector_alpaca.py  test_retry.py  test_sec_client.py  test_technical_indicators.py  test_universe_model.py  test_yfinance_client.py
(+55 files in other folders)
