[project]
name = "trading-signals"
version = "0.1.0"
description = "Signal Warehouse for quantitative trading signals with Alpaca Paper Trading"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "pandas-ta>=0.3.14",
    "pandas-market-calendars>=4.0",
    "scipy>=1.11",
    "lxml>=6.0.4",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_signals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
